chore: fixed color variable names

--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -89,11 +89,11 @@ body {
 }
 
 .primary {
-  color: var(--primary);
+  color: var(--primary-light);
 }
 
 .primary-bg {
-  background: var(--primary);
+  background: var(--primary-light);
   color: #fff;
 }
 
